--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,8 +33,12 @@ and open the template in the editor.
             <table class="hovered ">
                 <thead></thead>
                 <tbody>
-                <tr><td>hora</td><td class="right">lunes</td><td class="right">martes</td><td class="right">miercoles</td></tr>
-                <tr><td>ariel</td><td class="right">eduardo</td><td class="right">dupuy</td></tr>
+                <tr><th>Nombre</th><th class="right">2do Nombre</th><th class="right">Apellido</th></tr>
+                <tr><td>Ariel</td><td class="right">Eduardo</td><td class="right">Dupuy</td></tr>
+                <tr><td>Andrea  </td><td class="right">Carolina</td><td class="right">Do Prado</td></tr>
+                <tr><td>Pablo </td><td class="right">"Felino"</td><td class="right">Antelo</td></tr>
+                
+                
                 </tbody>
                 <tfoot></tfoot>
             </table>
